--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -68,8 +68,8 @@
     push:
       branches:
         - 'master'
-      tags:
-        - 'v[0-9]+.[0-9]+.[0-9]+'
+      # tags:
+      #   - 'v[0-9]+.[0-9]+.[0-9]+'
 
   jobs:
     build:
@@ -102,20 +102,20 @@
         -
           name: Set up Docker Buildx
           uses: docker/setup-buildx-action@v1
-        # -
-        #   name: Build and push
-        #   uses: docker/build-push-action@v2
-        #   with:
-        #     context: .
-        #     file: ./Dockerfile
-        #     push: true
-        #     tags: ${{ secrets.JFROG_URL }}/$IMG_NAME:latest
         -
-          name: Build and push Docker image
+          name: Build and push
           uses: docker/build-push-action@v2
           with:
             context: .
-            push: ${{ github.event.base_ref =='refs/heads/main' && github.ref_type == 'tag' && !startsWith(github.ref, 'refs/tags/v0.')}}
-            tags: ${{ steps.metadata.outputs.tags }}
-            labels: ${{ steps.metadata.outputs.labels }}
+            file: ./Dockerfile
+            push: true
+            tags: ${{ secrets.JFROG_URL }}/$IMG_NAME:latest
+        # -
+        #   name: Build and push Docker image
+        #   uses: docker/build-push-action@v2
+        #   with:
+        #     context: .
+        #     push: ${{ github.event.base_ref =='refs/heads/main' && github.ref_type == 'tag' && !startsWith(github.ref, 'refs/tags/v0.')}}
+        #     tags: ${{ steps.metadata.outputs.tags }}
+        #     labels: ${{ steps.metadata.outputs.labels }}
 
