--- a/.github/workflows/jfrog-ci.yaml
+++ b/.github/workflows/jfrog-ci.yaml
@@ -14,7 +14,7 @@
           name: Checkout 
           uses: actions/checkout@v2
         -
-          name: Login to Docker Hub
+          name: Login to Jfrog artifactory
           uses: docker/login-action@v1
           with:
             registry: ${{ secrets.JFROG_URL }}
