--- a/.github/workflows/jfrog-ci.yaml
+++ b/.github/workflows/jfrog-ci.yaml
@@ -8,6 +8,8 @@
   jobs:
     build:
       runs-on: ubuntu-latest
+      env:
+       IMG_NAME: ${{ variables.IMG_NAME }}
 
       steps:
         -
